[gd_scene load_steps=16 format=3 uid="uid://i56s2i06l4i8"]

[ext_resource type="Script" path="res://src/enemy.gd" id="1_m1poa"]
[ext_resource type="Shader" path="res://src/old-system/shaders/hit.gdshader" id="2_gue4p"]
[ext_resource type="Script" path="res://src/old-system/rpg/Hurtbox.gd" id="3_gedyw"]
[ext_resource type="Script" path="res://src/old-system/rpg/health.gd" id="4_2pvf1"]
[ext_resource type="Texture2D" uid="uid://couvtd7d4ge2p" path="res://assets/Boros .png" id="6_8hly1"]
[ext_resource type="Script" path="res://src/ShaderHitFlash.gd" id="6_bpdvi"]
[ext_resource type="Script" path="res://src/old-system/rpg/HitBox.gd" id="7_qlb3i"]
[ext_resource type="Script" path="res://src/SoftCollision.gd" id="8_0e65w"]

[sub_resource type="Animation" id="Animation_5t3cb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k0uy1"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jjwmx"]
_data = {
"RESET": SubResource("Animation_5t3cb"),
"move": SubResource("Animation_k0uy1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qaufs"]
size = Vector2(16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qebrr"]
shader = ExtResource("2_gue4p")
shader_parameter/enable = false
shader_parameter/hit_color = Color(1, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_bsobc"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0y67c"]
radius = 23.0217

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_m1poa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jjwmx")
}
autoplay = "move"

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health", "hit_flash")]
collision_layer = 16
collision_mask = 0
script = ExtResource("3_gedyw")
health = NodePath("Health")
hit_flash = NodePath("HitFlash")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_qaufs")

[node name="Health" type="Node" parent="Hurtbox"]
script = ExtResource("4_2pvf1")
max_health = 10.0

[node name="HitFlash" type="Node" parent="Hurtbox" node_paths=PackedStringArray("node")]
script = ExtResource("6_bpdvi")
node = NodePath("../../Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qebrr")
position = Vector2(0, -6)
texture = ExtResource("6_8hly1")
hframes = 6

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource("7_qlb3i")
damage = 20
knockback_force = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_bsobc")

[node name="SoftCollision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32
script = ExtResource("8_0e65w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SoftCollision"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_0y67c")

[connection signal="knockback" from="Hurtbox" to="." method="_on_hurtbox_knockback"]
[connection signal="zero_health" from="Hurtbox/Health" to="." method="_on_health_zero_health"]
